python/panosui_c.py


# /usr/local/include/UIAnimation.h: 44
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutSine", "cdecl"):
    UIAnimationTimingFunctionEaseOutSine = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutSine", "cdecl")
    UIAnimationTimingFunctionEaseOutSine.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutSine.restype = UIFloat

# /usr/local/include/UIAnimation.h: 45
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutSine", "cdecl"):
    UIAnimationTimingFunctionEaseInOutSine = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutSine", "cdecl")
    UIAnimationTimingFunctionEaseInOutSine.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutSine.restype = UIFloat

# /usr/local/include/UIAnimation.h: 46
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInQuad", "cdecl"):
    UIAnimationTimingFunctionEaseInQuad = _libs["panosui"].get("UIAnimationTimingFunctionEaseInQuad", "cdecl")
    UIAnimationTimingFunctionEaseInQuad.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInQuad.restype = UIFloat

# /usr/local/include/UIAnimation.h: 47
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutQuad", "cdecl"):
    UIAnimationTimingFunctionEaseOutQuad = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutQuad", "cdecl")
    UIAnimationTimingFunctionEaseOutQuad.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutQuad.restype = UIFloat

# /usr/local/include/UIAnimation.h: 48
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutQuad", "cdecl"):
    UIAnimationTimingFunctionEaseInOutQuad = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutQuad", "cdecl")
    UIAnimationTimingFunctionEaseInOutQuad.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutQuad.restype = UIFloat

# /usr/local/include/UIAnimation.h: 49
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInCubic", "cdecl"):
    UIAnimationTimingFunctionEaseInCubic = _libs["panosui"].get("UIAnimationTimingFunctionEaseInCubic", "cdecl")
    UIAnimationTimingFunctionEaseInCubic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInCubic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 50
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutCubic", "cdecl"):
    UIAnimationTimingFunctionEaseOutCubic = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutCubic", "cdecl")
    UIAnimationTimingFunctionEaseOutCubic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutCubic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 51
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutCubic", "cdecl"):
    UIAnimationTimingFunctionEaseInOutCubic = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutCubic", "cdecl")
    UIAnimationTimingFunctionEaseInOutCubic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutCubic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 52
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInQuart", "cdecl"):
    UIAnimationTimingFunctionEaseInQuart = _libs["panosui"].get("UIAnimationTimingFunctionEaseInQuart", "cdecl")
    UIAnimationTimingFunctionEaseInQuart.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInQuart.restype = UIFloat

# /usr/local/include/UIAnimation.h: 53
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutQuart", "cdecl"):
    UIAnimationTimingFunctionEaseOutQuart = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutQuart", "cdecl")
    UIAnimationTimingFunctionEaseOutQuart.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutQuart.restype = UIFloat

# /usr/local/include/UIAnimation.h: 54
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutQuart", "cdecl"):
    UIAnimationTimingFunctionEaseInOutQuart = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutQuart", "cdecl")
    UIAnimationTimingFunctionEaseInOutQuart.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutQuart.restype = UIFloat

# /usr/local/include/UIAnimation.h: 55
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInQuint", "cdecl"):
    UIAnimationTimingFunctionEaseInQuint = _libs["panosui"].get("UIAnimationTimingFunctionEaseInQuint", "cdecl")
    UIAnimationTimingFunctionEaseInQuint.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInQuint.restype = UIFloat

# /usr/local/include/UIAnimation.h: 56
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutQuint", "cdecl"):
    UIAnimationTimingFunctionEaseOutQuint = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutQuint", "cdecl")
    UIAnimationTimingFunctionEaseOutQuint.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutQuint.restype = UIFloat

# /usr/local/include/UIAnimation.h: 57
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutQuint", "cdecl"):
    UIAnimationTimingFunctionEaseInOutQuint = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutQuint", "cdecl")
    UIAnimationTimingFunctionEaseInOutQuint.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutQuint.restype = UIFloat

# /usr/local/include/UIAnimation.h: 58
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInExpo", "cdecl"):
    UIAnimationTimingFunctionEaseInExpo = _libs["panosui"].get("UIAnimationTimingFunctionEaseInExpo", "cdecl")
    UIAnimationTimingFunctionEaseInExpo.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInExpo.restype = UIFloat

# /usr/local/include/UIAnimation.h: 59
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutExpo", "cdecl"):
    UIAnimationTimingFunctionEaseOutExpo = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutExpo", "cdecl")
    UIAnimationTimingFunctionEaseOutExpo.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutExpo.restype = UIFloat

# /usr/local/include/UIAnimation.h: 60
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutExpo", "cdecl"):
    UIAnimationTimingFunctionEaseInOutExpo = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutExpo", "cdecl")
    UIAnimationTimingFunctionEaseInOutExpo.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutExpo.restype = UIFloat

# /usr/local/include/UIAnimation.h: 61
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInCirc", "cdecl"):
    UIAnimationTimingFunctionEaseInCirc = _libs["panosui"].get("UIAnimationTimingFunctionEaseInCirc", "cdecl")
    UIAnimationTimingFunctionEaseInCirc.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInCirc.restype = UIFloat

# /usr/local/include/UIAnimation.h: 62
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutCirc", "cdecl"):
    UIAnimationTimingFunctionEaseOutCirc = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutCirc", "cdecl")
    UIAnimationTimingFunctionEaseOutCirc.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutCirc.restype = UIFloat

# /usr/local/include/UIAnimation.h: 63
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutCirc", "cdecl"):
    UIAnimationTimingFunctionEaseInOutCirc = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutCirc", "cdecl")
    UIAnimationTimingFunctionEaseInOutCirc.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutCirc.restype = UIFloat

# /usr/local/include/UIAnimation.h: 64
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInBack", "cdecl"):
    UIAnimationTimingFunctionEaseInBack = _libs["panosui"].get("UIAnimationTimingFunctionEaseInBack", "cdecl")
    UIAnimationTimingFunctionEaseInBack.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInBack.restype = UIFloat

# /usr/local/include/UIAnimation.h: 65
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutBack", "cdecl"):
    UIAnimationTimingFunctionEaseOutBack = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutBack", "cdecl")
    UIAnimationTimingFunctionEaseOutBack.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutBack.restype = UIFloat

# /usr/local/include/UIAnimation.h: 66
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutBack", "cdecl"):
    UIAnimationTimingFunctionEaseInOutBack = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutBack", "cdecl")
    UIAnimationTimingFunctionEaseInOutBack.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutBack.restype = UIFloat

# /usr/local/include/UIAnimation.h: 67
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInElastic", "cdecl"):
    UIAnimationTimingFunctionEaseInElastic = _libs["panosui"].get("UIAnimationTimingFunctionEaseInElastic", "cdecl")
    UIAnimationTimingFunctionEaseInElastic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInElastic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 68
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutElastic", "cdecl"):
    UIAnimationTimingFunctionEaseOutElastic = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutElastic", "cdecl")
    UIAnimationTimingFunctionEaseOutElastic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutElastic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 69
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutElastic", "cdecl"):
    UIAnimationTimingFunctionEaseInOutElastic = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutElastic", "cdecl")
    UIAnimationTimingFunctionEaseInOutElastic.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutElastic.restype = UIFloat

# /usr/local/include/UIAnimation.h: 70
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInBounce", "cdecl"):
    UIAnimationTimingFunctionEaseInBounce = _libs["panosui"].get("UIAnimationTimingFunctionEaseInBounce", "cdecl")
    UIAnimationTimingFunctionEaseInBounce.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInBounce.restype = UIFloat

# /usr/local/include/UIAnimation.h: 71
if _libs["panosui"].has("UIAnimationTimingFunctionEaseOutBounce", "cdecl"):
    UIAnimationTimingFunctionEaseOutBounce = _libs["panosui"].get("UIAnimationTimingFunctionEaseOutBounce", "cdecl")
    UIAnimationTimingFunctionEaseOutBounce.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseOutBounce.restype = UIFloat

# /usr/local/include/UIAnimation.h: 72
if _libs["panosui"].has("UIAnimationTimingFunctionEaseInOutBounce", "cdecl"):
    UIAnimationTimingFunctionEaseInOutBounce = _libs["panosui"].get("UIAnimationTimingFunctionEaseInOutBounce", "cdecl")
    UIAnimationTimingFunctionEaseInOutBounce.argtypes = [UIFloat]
    UIAnimationTimingFunctionEaseInOutBounce.restype = UIFloat

# /usr/local/include/UIApplication.h: 7
class struct__UIApplication(Structure):
    pass

struct__UIApplication.__slots__ = [
    'running',
]
struct__UIApplication._fields_ = [
    ('running', c_int),
]

UIApplication = struct__UIApplication# /usr/local/include/UIApplication.h: 7

# /usr/local/include/UIApplication.h: 12
class struct__UIApplicationDelegate(Structure):
    pass

struct__UIApplicationDelegate.__slots__ = [
    'didFinishLaunching',
]
struct__UIApplicationDelegate._fields_ = [
    ('didFinishLaunching', CFUNCTYPE(UNCHECKED(None), POINTER(UIApplication))),
]

UIApplicationDelegate = struct__UIApplicationDelegate# /usr/local/include/UIApplication.h: 12

# /usr/local/include/UIApplication.h: 14
if _libs["panosui"].has("UIApplicationMain", "cdecl"):
    UIApplicationMain = _libs["panosui"].get("UIApplicationMain", "cdecl")
    UIApplicationMain.argtypes = [POINTER(UIApplicationDelegate)]
    UIApplicationMain.restype = None

# /usr/local/include/UIApplication.h: 15
if _libs["panosui"].has("UIApplicationShared", "cdecl"):
    UIApplicationShared = _libs["panosui"].get("UIApplicationShared", "cdecl")
    UIApplicationShared.argtypes = []
    UIApplicationShared.restype = POINTER(UIApplication)

# /usr/local/include/UIColor.h: 3
class struct__UIColor(Structure):
    pass

UIColor = struct__UIColor# /usr/local/include/UIColor.h: 3

# /usr/local/include/UIColor.h: 5
if _libs["panosui"].has("UIColorCreateRGBA", "cdecl"):
    UIColorCreateRGBA = _libs["panosui"].get("UIColorCreateRGBA", "cdecl")
    UIColorCreateRGBA.argtypes = [c_int, c_int, c_int, c_int]
    UIColorCreateRGBA.restype = POINTER(UIColor)
